--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start-dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,9 +14,11 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.0.2",
-    "nodemon": "^2.0.2",
     "sequelize": "^5.21.3",
     "sequelize-auto-migrations": "^1.0.3",
     "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
